--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div [ngStyle]="{ 'background-color': 'black' }">
+  <div class="header conteiner">
+    <a routerLink="/"
+      ><img
+        src="../../../assets/logo-branca.svg"
+        alt="Logo do site"
+        width="135"
+        height="32"
+    /></a>
+    <nav aria-label="primaria">
+      <ul class="header-menu">
+        <li><a routerLink="/experiencia">Experiencias</a></li>
+        <li><a routerLink="/contato">Contato</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
