--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<app-header></app-header>
+<app-introducao></app-introducao>
+<app-projetos></app-projetos>
+<app-formacao></app-formacao>
+<app-cta></app-cta>
+<app-footer></app-footer>
