--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-introducao></app-introducao>
+<app-introducao [name]="userName" [job]="job"></app-introducao>
 <app-projetos></app-projetos>
 <app-formacao></app-formacao>
 <app-cta></app-cta>
