--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-introducao [name]="userName" [job]="job"></app-introducao>
-<app-projetos></app-projetos>
+<app-projetos [sectionProjetos]="sectionProjetos"></app-projetos>
 <app-formacao></app-formacao>
 <app-cta></app-cta>
 <app-footer></app-footer>
+<!-- [sectionFormacao]="sectionFormacao" -->
