--- a/src/app/components/home/projetos/projetos.component.html
+++ b/src/app/components/home/projetos/projetos.component.html
@@ -1,1 +1,24 @@
-<p>projetos works!</p>
+<div class="projetos conteiner">
+  <div>
+    <h2 class="titulo">{{ sectionProjetos }}</h2>
+  </div>
+  <div>
+    <p class="descricaoSection">
+      Desenvolvo projetos em <strong>HTML</strong>, <strong>CSS</strong> e
+      <strong>JavaScript</strong>. Para aplicações web, também realizo a parte
+      de <strong>UI Design</strong> do projeto.
+    </p>
+
+    <div>
+      <ul>
+        <li *ngFor="let projeto of projetos" class="projeto">
+          <span>{{ projeto.ano }}</span>
+          <h3>{{ projeto.nome }}</h3>
+          <p>{{ projeto.funcao }}</p>
+          <p>{{ projeto.descricao }}</p>
+          <p>{{ projeto.linguagens }}</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
