--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
 <app-introducao [name]="userName" [job]="job"></app-introducao>
 <app-projetos [sectionProjetos]="sectionProjetos"></app-projetos>
-<app-formacao></app-formacao>
+<app-formacao [sectionFormacao]="sectionFormacao"></app-formacao>
 <app-cta></app-cta>
 <app-footer></app-footer>
-<!-- [sectionFormacao]="sectionFormacao" -->
