--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<div [ngStyle]="{ 'background-color': 'black', color: 'white' }">
+  <div class="footer conteiner">
+    <p>{{ name }} © 2023 - Todos os Direitos Reservados. <span></span></p>
+    <p>
+      Desenvolvido por
+      <a
+        class="p1"
+        href="https://www.linkedin.com/in/herick-silva-36b440134/"
+        target="_blank"
+        >Herick Silva</a
+      >
+    </p>
+  </div>
+</div>
