--- a/src/app/components/home/introducao/introducao.component.html
+++ b/src/app/components/home/introducao/introducao.component.html
@@ -1,5 +1,5 @@
 <div [ngStyle]="{ 'background-color': 'black' }">
-  <div class="conteiner introducao">
+  <div class="introducao conteiner">
     <div>
       <img src="assets/intro4.jpg" alt="" />
     </div>
