--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,13 +2,22 @@
   <div class="header conteiner">
     <a routerLink="/"
       ><img
-        src="../../../assets/logo-branca.svg"
+        src="/assets/logo-branca.svg"
         alt="Logo do site"
         width="135"
         height="32"
     /></a>
     <nav aria-label="primaria">
       <ul class="header-menu">
+        <li><a routerLink="/experiencia">Experiencias</a></li>
+        <li><a routerLink="/contato">Contato</a></li>
+      </ul>
+    </nav>
+
+    <nav class="btnMobile">
+      <img (click)="handleClick()" src="/assets/mobile.svg" alt="" width="36" />
+
+      <ul *ngIf="ativo" class="menuMobile">
         <li><a routerLink="/experiencia">Experiencias</a></li>
         <li><a routerLink="/contato">Contato</a></li>
       </ul>
