--- a/src/app/components/home/formacao/formacao.component.html
+++ b/src/app/components/home/formacao/formacao.component.html
@@ -1,6 +1,8 @@
 <div [ngStyle]="{ 'background-color': '#111111', color: 'white' }">
   <div class="formacao conteiner">
-    <h2 class="titulo">{{ sectionFormacao }}</h2>
+    <h2 class="titulo tformacao">
+      {{ sectionFormacao }}<span class="ponto">.</span>
+    </h2>
 
     <div>
       <p class="descricaoSection">
