--- a/src/app/components/home/projetos/projetos.component.html
+++ b/src/app/components/home/projetos/projetos.component.html
@@ -1,6 +1,6 @@
 <div class="projetos conteiner">
   <div>
-    <h2 class="titulo">{{ sectionProjetos }}</h2>
+    <h2 class="titulo">{{ sectionProjetos }}<span class="ponto">.</span></h2>
   </div>
   <div>
     <p class="descricaoSection">
