--- a/src/app/components/paginas/experiencia/experiencia.component.css
+++ b/src/app/components/paginas/experiencia/experiencia.component.css
@@ -1,5 +1,5 @@
 .experiencia {
-  padding: 50px 0;
+  padding-left: 40px;
 }
 
 .experienciaLista {
@@ -42,4 +42,9 @@
 
 .maisInfosConteudo {
   margin-top: 30px;
+}
+
+@media (max-width: 800px) {
+  .experiencia {
+  }
 }
