--- a/src/styles.css
+++ b/src/styles.css
@@ -79,7 +79,6 @@ body {
 .sectionTitulo {
   font: 600 1.5rem/1.125 Poppins, sans-serif;
   color: var(--c0);
-  padding: 50px 0;
 }
 
 .sectionTitulo span {
@@ -117,4 +116,13 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+@media (max-width: 800px) {
+  .titulo {
+    max-width: initial;
+    font-size: 3rem;
+    text-transform: initial;
+    color: #141414;
+  }
 }
