--- a/src/app/components/paginas/contato/contato.component.css
+++ b/src/app/components/paginas/contato/contato.component.css
@@ -5,6 +5,7 @@
 .contato {
   display: grid;
   grid-template-columns: 5fr 7fr;
+  padding-top: 0;
 }
 
 .contato-logo,
@@ -70,4 +71,26 @@
   margin-top: 0.4rem;
   border-left: 3px solid #dc3545;
   padding-left: 0.2rem;
+}
+
+@media (max-width: 800px) {
+  .contato {
+    grid-template-columns: 1fr;
+  }
+  .contato-logo {
+    display: none;
+  }
+  .contato-formulario {
+    padding: 30px 20px;
+    border-radius: 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+  .form .col-2 {
+    grid-column: 1;
+  }
 }
