--- a/src/app/components/paginas/contato/contato.component.html
+++ b/src/app/components/paginas/contato/contato.component.html
@@ -10,6 +10,12 @@
     <section class="contato-logo">
       <img src="assets/H.svg" alt="" />
       <p [ngStyle]="{ color: 'white' }">Desde já<br />Agradeço o contato!</p>
+      <button (click)="Contato()">MOSTRAR CONTATO</button>
+
+      <!-- <ul *ngFor="let contato of contatos">
+        <li></li>
+      </ul> -->
+      <!-- <h3>{{ teste }}</h3> -->
     </section>
 
     <section class="contato-formulario" aria-label="Formulario">
@@ -21,7 +27,13 @@
       >
         <div>
           <label for="nome">Nome</label>
-          <input type="text" name="nome" id="nome" placeholder="Seu nome" />
+          <input
+            type="text"
+            name="nome"
+            id="nome"
+            formControlName="nome"
+            placeholder="Seu nome"
+          />
         </div>
         <div>
           <label for="telefone">Telefone</label>
