--- a/src/app/components/home/formacao/formacao.component.html
+++ b/src/app/components/home/formacao/formacao.component.html
@@ -6,9 +6,9 @@
 
     <div>
       <p class="descricaoSection">
-        Desenvolvo projetos em <strong>HTML</strong>, <strong>CSS</strong> e
-        <strong>JavaScript</strong>. Para aplicações web, também realizo a parte
-        de <strong>UI Design</strong> do projeto.
+        Minha mais recente experiência acadêmica está sendo a faculdade de
+        <strong>Análise e Desenvolvimento de Sistemas</strong>. Alem disso me
+        mantenho sempre atualizado com cursos intensivos online.
       </p>
 
       <ul class="formacaoLista">
