--- a/src/app/components/paginas/contato/contato.component.html
+++ b/src/app/components/paginas/contato/contato.component.html
@@ -10,12 +10,7 @@
     <section class="contato-logo">
       <img src="assets/H.svg" alt="" />
       <p [ngStyle]="{ color: 'white' }">Desde já<br />Agradeço o contato!</p>
-      <button (click)="Contato()">MOSTRAR CONTATO</button>
-
-      <!-- <ul *ngFor="let contato of contatos">
-        <li></li>
-      </ul> -->
-      <!-- <h3>{{ teste }}</h3> -->
+      <!-- <button (click)="Contato()">MOSTRAR CONTATO</button> -->
     </section>
 
     <section class="contato-formulario" aria-label="Formulario">
